WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231373
Fix the macCatalyst build
https://bugs.webkit.org/show_bug.cgi?id=231373
Summary
Fix the macCatalyst build
Aditya Keerthi
Reported
2021-10-07 10:32:13 PDT
Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:2831:23: error: implicit instantiation of undefined template 'WTF::FixedVector<const char *>'
Attachments
Patch
(1.16 KB, patch)
2021-10-07 10:38 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-10-07 10:33:14 PDT
rdar://83984197
Aditya Keerthi
Comment 2
2021-10-07 10:38:29 PDT
Created
attachment 440512
[details]
Patch
EWS
Comment 3
2021-10-07 11:57:06 PDT
Committed
r283731
(
242655@main
): <
https://commits.webkit.org/242655@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440512
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug