Fix the macCatalyst build https://bugs.webkit.org/show_bug.cgi?id=231373 rdar://83984197

Reviewed by Tim Horton.

* UIProcess/API/ios/WKWebViewIOS.mm: Add missing import.


Canonical link: https://commits.webkit.org/242655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283731 268f45cc-cd09-0410-ab3c-d52691b4dbfc