Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -62,6 +62,7 @@
 #import <pal/spi/cocoa/QuartzCoreSPI.h>
 #import <pal/spi/ios/GraphicsServicesSPI.h>
 #import <wtf/BlockPtr.h>
+#import <wtf/FixedVector.h>
 #import <wtf/SystemTracing.h>
 #import <wtf/cocoa/VectorCocoa.h>
 
